--- a/style.css
+++ b/style.css
@@ -85,10 +85,12 @@ nav a:hover {
 .search-form {
   display: flex;
   align-items: center;
+  font-size: 1.2rem;
 }
 
 .search-form * {
   padding: 1rem 1.5rem;
+  font-size: 1.2rem;
 }
 
 .search-form i {
@@ -101,16 +103,18 @@ nav a:hover {
   border: 1px solid var(--lightgrey);
 }
 
-.search-form input::placeholder {
-  font-size: 1.2rem;
-}
-
 .search-form button {
   background-color: var(--blue);
   color: white;
-  font-size: 1.2rem;
   font-weight: bold;
   border-radius: 0 1rem 1rem 0;
   border: none;
   cursor: pointer;
+  opacity: 0.9;
+  transition: transform 200ms;
+}
+
+.search-form button:hover {
+  opacity: 1;
+  transform: scale(1.03);
 }
