--- a/style.css
+++ b/style.css
@@ -1,120 +1,19 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700;800;900&display=swap");
+@import url("./css/navbar.css");
+@import url("./css/body.css");
+@import url("./css/search-form.css");
+@import url("./css/filters.css");
+@import url("./css/results-message.css");
+@import url("./css/apartments-list.css");
+@import url("./css/popular.css");
+@import url("./css/apartment.css");
+@import url("./css/popular-card.css");
+@import url("./css/activities.css");
 
 :root {
   --blue: #0065fc;
+  --darkgrey: #d9d9d9;
   --lightgrey: #f2f2f2;
-}
-
-/* WILDCARD */
-* {
-  box-sizing: border-box;
-  font-family: "Raleway", "sans-serif";
-}
-
-body {
-  margin: 0;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-/* NAVBAR */
-nav {
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  flex-wrap: wrap;
-}
-
-nav a {
-  padding: 2rem;
-  border-top: 3px solid transparent;
-}
-
-nav a:hover {
-  border-top: 3px solid var(--blue);
-  color: var(--blue);
-}
-
-#logo {
-  margin-right: auto;
-  padding: 0 2rem;
-}
-
-.signup {
-  font-weight: bold;
-  color: var(--blue);
-}
-
-.sub-nav {
-  display: flex;
-}
-
-@media (max-width: 800px) {
-  .sub-nav {
-    order: 1;
-    flex-basis: 100%;
-    text-align: center;
-  }
-
-  .sub-nav a {
-    flex-basis: 50%;
-    border-bottom: 3px solid var(--lightgrey);
-  }
-
-  .sub-nav a:hover {
-    border-bottom: 3px solid var(--blue);
-    border-top: 3px solid transparent;
-    color: var(--blue);
-  }
-}
-
-/* BODY */
-.wrapper {
-  padding: 0 2rem;
-}
-
-.wrapper h1,
-.wrapper p {
-  margin-bottom: 1rem;
-}
-
-/* SEARCH-FORM */
-.search-form {
-  display: flex;
-  align-items: center;
-  font-size: 1.2rem;
-}
-
-.search-form * {
-  padding: 1rem 1.5rem;
-  font-size: 1.2rem;
-}
-
-.search-form i {
-  background-color: var(--lightgrey);
-  border-radius: 1rem 0 0 1rem;
-}
-
-.search-form input {
-  flex-basis: 16rem;
-  border: 1px solid var(--lightgrey);
-}
-
-.search-form button {
-  background-color: var(--blue);
-  color: white;
-  font-weight: bold;
-  border-radius: 0 1rem 1rem 0;
-  border: none;
-  cursor: pointer;
-  opacity: 0.9;
-  transition: transform 200ms;
-}
-
-.search-form button:hover {
-  opacity: 1;
-  transform: scale(1.03);
+  --lightblue: #deebff;
+  --lighterblue: #f3f8ff;
 }
