--- a/css/activities.css
+++ b/css/activities.css
@@ -1,63 +1,79 @@
-/* ACTIVITES */
+/* Activities */
 
-.activites-list {
-  display: flex;
-  flex-wrap: wrap;
+.activities-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(10rem, 25rem));
+  grid-template-rows: repeat(5, 1fr);
+  gap: 2rem;
+  margin-top: 2rem;
+  justify-content: center;
+  margin-bottom: 4rem;
 }
 
-.activite-card {
+.activities-list > * {
+  background-size: cover;
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  border: 1px solid red;
-  max-width: 20rem;
-  min-width: 15rem;
-  margin: 1rem;
+  background-position: center;
   border-radius: 1rem;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  transition: all 200ms;
 }
 
-.activite-card-image {
-  height: 100%;
+.activities-list > div:hover {
+  transform: scale(1.02);
+}
+.big {
+  height: 30rem;
 }
 
-.activite-card img {
-  height: 100%;
-  object-fit: cover;
-  object-position: center;
+.big1 {
+  grid-row: 1 / -1;
+  background-image: url("https://reservia.mathisbarre.com/img/activity/medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg");
+}
+
+.big2 {
+  grid-column: 3/4;
+  grid-row: 1 / -1;
+  background-image: url("https://reservia.mathisbarre.com/img/activity/medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg");
+}
+.medium1 {
+  grid-row: 1 / span 3;
+  background-image: url("https://reservia.mathisbarre.com/img/activity/small/paul-hermann-QFTrLdQIRhI-unsplash.jpg");
+}
+.medium2 {
+  grid-column: 4/-1;
+  grid-row: 3/-1;
+  background-image: url("https://reservia.mathisbarre.com/img/activity/small/lena-paulin-wH2-EJoDcV0-unsplash.jpg");
+  background-position: bottom;
+}
+.small1 {
+  grid-column: 2/3;
+  grid-row: 4/-1;
+  background-image: url("https://reservia.mathisbarre.com/img/activity/small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg");
+}
+.small2 {
+  grid-column: 4/-1;
+  grid-row: 1/3;
+  background-image: url("https://reservia.mathisbarre.com/img/activity/small/florian-wehde-xW9e8gdotxI-unsplash.jpg");
+}
+
+.activities-list h3 {
+  background-color: white;
+  margin-top: auto;
+  margin-bottom: 0;
   width: 100%;
-  border-radius: 1rem;
+  padding: 1rem;
+  border-radius: 0 0 1rem 1rem;
 }
 
-.activite-card-child {
-  border: 1px solid blue;
-  display: flex;
-  flex-direction: column;
-  border-radius: 1rem;
-}
-
-.activites-list h4 {
-  border: 1px solid black;
-  margin: 1rem;
-}
-
-.petit {
-  height: 11rem;
-}
-
-.grand {
-  height: 14rem;
-}
-
-.parent {
-  background-color: teal;
-}
-
-@media (max-width: 1200px) {
-  .parent {
-    flex-direction: row;
+@media (max-width: 1500px) {
+  .activities-list {
+    grid-template-rows: repeat(auto-fit, 15rem);
   }
 
-  .activites-list > :not(.parent) {
-    background-color: red;
+  .activities-list > * {
+    grid-column: span 1;
+    grid-row: span 1;
+    height: 15rem;
   }
 }
